--- a/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/style.css
+++ b/Web Dev Assingment Solutions/Projects/Assignment 3 - Question 6/style.css
@@ -110,6 +110,54 @@ video {
   color: blueviolet;
 }
 
+footer {
+  margin-top: 10px;
+  background: #000;
+  color: var(--text-clr-white);
+  display: flex;
+  justify-content: space-evenly;
+  padding: 4rem 0;
+}
+
+.nav-heading {
+  margin-bottom: 8px;
+}
+
+.box1,
+.box2,
+.box3 {
+  width: 30%;
+}
+
+.box1 p {
+  color: gray;
+}
+
+.box2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navigation {
+  list-style-type: none;
+  color: gray;
+}
+
+.support {
+  list-style-type: none;
+  color: gray;
+}
+
+.box3 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#email {
+  padding: 8px;
+  border-radius: 4px;
+}
 @media (max-width: 480px) {
   .nav-links {
     display: none;
@@ -141,5 +189,21 @@ video {
 
   .info {
     padding: 2rem;
+  }
+
+  footer {
+    flex-direction: column;
+    padding: 2rem;
+    gap: 1rem;
+  }
+
+  .box1,
+  .box2,
+  .box3 {
+    width: 100%;
+  }
+  .box2 {
+    flex-direction: column;
+    gap: 1rem;
   }
 }
